--- a/list.html
+++ b/list.html
@@ -26,5 +26,31 @@
       <dt>Milk</dt>
       <dd>- White cold drink</dd>
     </dl>
+    <!-- unorderlist -->
+    <ul>
+      <li>Bread</li>
+      <li>Butter</li>
+      <li>Jam</li>
+    </ul>
+    <ol type="A">
+      <li>Bread</li>
+      <li>Butter</li>
+      <li>Jam</li>
+    </ol>
+    <ol type="a">
+      <li>Bread</li>
+      <li>Butter</li>
+      <li>Jam</li>
+    </ol>
+    <ol type="I">
+      <li>Bread</li>
+      <li>Butter</li>
+      <li>Jam</li>
+    </ol>
+    <ol type="i">
+      <li>Bread</li>
+      <li>Butter</li>
+      <li>Jam</li>
+    </ol>
   </body>
 </html>
